--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
 <app-a2 *ngIf="try=='a2'"></app-a2>
 <app-a3 *ngIf="try=='a3'"></app-a3>
 
-<app-db-warper></app-db-warper>
+<ul>
+  <li><button routerLink="person">person</button></li>
+  <li><button routerLink="stars">stars</button></li>
+</ul>
 
 
 <router-outlet></router-outlet>
