--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 <app-a3 *ngIf="try=='a3'"></app-a3>
 
 <ul>
-  <li><button routerLink="person">person</button></li>
-  <li><button routerLink="stars">stars</button></li>
+  <li><a [routerLink]="'db'">db</a></li>
+  <!-- <li><a [routerLink]="'other'">other</a></li> -->
 </ul>
 
 
